--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="fragment_1_name">Hello blank fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="currency_main">In time currency</string>
 </resources>
