--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="fragment_1_name">Hello blank fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="currency_main">In time currency</string>
+    <string name="Request_currency">Request</string>
 </resources>
